2010-04-01  MORITA Hajime  <morrita@google.com>

Reviewed by Shinichiro Hamaji.

        https://bugs.webkit.org/show_bug.cgi?id=36948
        Refactoring: Position::primaryDirection() should be extracted.

        No new tests. No functinal change.

        * dom/Position.cpp:
        (WebCore::Position::getInlineBoxAndOffset):
        (WebCore::Position::primaryDirection): Added
        * dom/Position.h:
        * editing/VisiblePosition.cpp:
        (WebCore::VisiblePosition::leftVisuallyDistinctCandidate):
        (WebCore::VisiblePosition::rightVisuallyDistinctCandidate):

Canonical link: https://commits.webkit.org/48208@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56915 268f45cc-cd09-0410-ab3c-d52691b4dbfc